--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Get in touch</h2>
+					<h2>Fale conosco</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -270,39 +270,39 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="name">
-                                Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
+                                Nome</label>
+                            <input type="text" class="form-control" id="name" placeholder="Digite o nome" required="required" />
                         </div>
                         <div class="form-group">
                             <label for="email">
-                                Email Address</label>
+                                Email</label>
                             <div class="input-group">
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
                                 </span>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
+                                <input type="email" class="form-control" id="email" placeholder="Digite o email" required="required" /></div>
                         </div>
                         <div class="form-group">
                             <label for="subject">
-                                Subject</label>
+                                Assunto</label>
                             <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
+                                <option value="na" selected=""></option>
+                                <option value="service">Orçamento</option>
+                                <option value="suggestions">Sugestão</option>
+                                <option value="product">Suporte</option>
                             </select>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="name">
-                                Message</label>
+                                Menssagem</label>
                             <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Message"></textarea>
+                                placeholder="Digite o texto"></textarea>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
-                            Send Message</button>
+                            Enviar</button>
                     </div>
                 </div>
                 </form>
@@ -311,21 +311,21 @@
 		
 		<div class="col-lg-4">
 			<div class="widget-contact">
-				<h5>Main Office</h5>
+				<h5>Endereço</h5>
 				
 				<address>
-				  <strong>Squas Design, Inc.</strong><br>
+				  <strong>CodeBeMine, Inc.</strong><br>
 				  Tower 795 Folsom Ave, Beautiful Suite 600<br>
-				  San Francisco, CA 94107<br>
-				  <abbr title="Phone">P:</abbr> (123) 456-7890
+				  Caldas Novas - GO<br>
+				  <abbr title="Phone">P:</abbr> (64) 9222-7558
 				</address>
 
 				<address>
 				  <strong>Email</strong><br>
-				  <a href="mailto:#">email.name@example.com</a>
+				  <a href="mailto:#">contato@codebemine.com.br</a>
 				</address>	
 				<address>
-				  <strong>We're on social networks</strong><br>
+				  <strong>Estamos nas redes socoais</strong><br>
                        	<ul class="company-social">
                             <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -353,7 +353,7 @@
 						</a>
 					</div>
 					</div>
-					<p>&copy;Copyright 2014 - Squad. All rights reserved.</p>
+					<p>&copy;Copyright 2014 - CodeBeMine. Todos os direitos reservados.</p>
 				</div>
 			</div>	
 		</div>
