Alteração dos textos
alterando os textos do site

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>Our Services</h2>
+					<h2>Nossos serviços</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -185,8 +185,8 @@
 						<img src="img/icons/service-icon-1.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Print</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Sistemas Web</h5>
+						<p>Gerencie seu negócio de qualquer lugar. Desenvolvemos sistemas personalizados.</p>
 					</div>
                 </div>
 				</div>
@@ -198,8 +198,8 @@
 						<img src="img/icons/service-icon-2.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Web Design</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Desenvolvimento de Sites</h5>
+						<p>Trabalhamos com desnvolvimento de sites dinâmicos e estáticos. Solicite seu orçamento.</p>
 					</div>
                 </div>
 				</div>
@@ -224,8 +224,8 @@
 						<img src="img/icons/service-icon-4.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Cloud System</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Loja Virtual</h5>
+						<p>Tenha sua loja virtual e mantenha seu comércio aberto 24 horas por dia 7 dias na semana.</p>
 					</div>
                 </div>
 				</div>
