correção nos textos
2

--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
 						<img src="img/icons/service-icon-3.png" alt="" />
 					</div>
 					<div class="service-desc">
-						<h5>Photography</h5>
-						<p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
+						<h5>Desenvolvimento de mobile</h5>
+						<p>Levamos a sua empresa para o mundo mobile, faça com que seus clientes consigam acessar sua empresa através de 
+						um apicativo no celular ou tablet.</p>
 					</div>
                 </div>
 				</div>
