Troca de Icones
Troca de icones

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 	<!-- /Section: intro -->
 
 	<!-- Section: about -->
-  <!--   <section id="about" class="home-section text-center">
+    <!-- <section id="about" class="home-section text-center">
 		<div class="heading-about">
 			<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
 					<div class="wow bounceInDown" data-wow-delay="0.4s">
 					<div class="section-heading">
-					<h2>About us</h2>
+					<h2>Nosso trabalho</h2>
 					<i class="fa fa-2x fa-angle-down"></i>
 
 					</div>
@@ -182,7 +182,7 @@
 				<div class="wow fadeInLeft" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-1.png" alt="" />
+						<img src="img/icons/sistemaWEB.png" height="50" width="50" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Sistemas Web</h5>
@@ -195,7 +195,7 @@
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-2.png" alt="" />
+						<img src="img/icons/desenvolvimentoSITES.svg" height="50" width="50" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Desenvolvimento de Sites</h5>
@@ -208,7 +208,7 @@
 				<div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-3.png" alt="" />
+						<img src="img/icons/mobile.png" height="50" width="50" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Desenvolvimento de mobile</h5>
@@ -222,7 +222,7 @@
 				<div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
 					<div class="service-icon">
-						<img src="img/icons/service-icon-4.png" alt="" />
+						<img src="img/icons/ecommerce.png" height="50" width="50" alt="" />
 					</div>
 					<div class="service-desc">
 						<h5>Loja Virtual</h5>
