--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 				
 				<address>
 				  <strong>CodeBeMine, Inc.</strong><br>
-				  Tower 795 Folsom Ave, Beautiful Suite 600<br>
+				  <!-- Tower 795 Folsom Ave, Beautiful Suite 600 --><br>
 				  Caldas Novas - GO<br>
 				  <abbr title="Phone">P:</abbr> (64) 9222-7558
 				</address>
