--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+2<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -316,7 +316,7 @@
 				
 				<address>
 				  <strong>CodeBeMine, Inc.</strong><br>
-				  <!-- Tower 795 Folsom Ave, Beautiful Suite 600 --><br>
+				  R. 14 N°80 Ed. Terraço - Setor Central<br>
 				  Caldas Novas - GO<br>
 				  <abbr title="Phone">P:</abbr> (64) 9222-7558
 				</address>
@@ -326,11 +326,11 @@
 				  <a href="mailto:#">contato@codebemine.com.br</a>
 				</address>	
 				<address>
-				  <strong>Estamos nas redes socoais</strong><br>
+				  <strong>Estamos nas redes sociais</strong><br>
                        	<ul class="company-social">
                             <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                            <!-- <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li> -->
                             <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                         </ul>	
 				</address>					
