--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 				<address>
 				  <strong>Estamos nas redes sociais</strong><br>
                        	<ul class="company-social">
-                            <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li class="social-facebook"><a href="https://www.facebook.com/CodeBeMine" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <!-- <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li> -->
                             <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
